tests/org.eclipse.php.core.tests/workspace/errors/php53/unfinishedMethodDecl2.pdtt
--TEST--
Test unfinished method declaration error reporting
--FILE--
<?php
function foo() {
$a = 5;
?>
--EXPECT--
[line=5, start=34, end=37] syntax error, unexpected 'EOF'